re PR c++/17976 (Calls the dtor twice)

PR c++/17976
	* decl.c (cp_finish_decl): Do not call expand_static_init more
	than once for a single variable.

	PR c++/17976
	* g++.dg/init/dtor3.C: New test.

From-SVN: r89083